fix what is chalk example

--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -51,7 +51,7 @@ class Transaction:
     id: int
     amount: float
     user_id: "User.id"
-    user: User
+    user: "User"
 
 @features
 class User:
