--- a/offline-query-timeout.mdx
+++ b/offline-query-timeout.mdx
@@ -1,6 +1,8 @@
 ---
 title: Offline Query Heartbeat Timeout
 description: Learn more about debugging offline query timeouts.
+metaTitle: Offline Query Heartbeat Timeout
+metaDescription: Learn more about debugging offline query timeouts.
 ---
 
 Offline queries can consume significant amounts of system resources. Chalk's management plane checks each
