--- a/notebook-development.mdx
+++ b/notebook-development.mdx
@@ -198,7 +198,7 @@ Movie.is_latest_release= _.director.num_movies == _.release_number
 The expression above defines a boolean feature which tests whether the release number for a movie (`_.release_number`) is equal to the number of movies a director
 has released (`_.director.num_movies`).
 
-### Using Has-many Relationships
+### Using Has-Many Relationships
 
 In the schema we've defined above, a Director is in a has-many relationship with their Movies.
 
