--- a/changelog.mdx
+++ b/changelog.mdx
@@ -7,11 +7,11 @@ description: Updates to Chalk!
 
 ## February 20, 2025
 
-### Datasets can now be persisted to your AWS Glue Catalog
+### Persist Datasets to your [AWS Glue Catalog](https://docs.aws.amazon.com/prescriptive-guidance/latest/serverless-etl-aws-glue/aws-glue-data-catalog.html)
 
 ML teams often use offline queries to build training sets by pulling historical data and loading multiple features at specific points in time.
-These [Datasets](https://docs.chalk.ai/docs/datasets), results returned from offline queries, can now be exported back into your AWS Glue catalog.
-This lets other teams discover them and enables downstream analytical workflows.
+We call the results returned from these offline queries [Datasets](https://docs.chalk.ai/docs/datasets).
+Chalk supports exporting Datasets back into your AWS Glue catalog, letting other teams discover them and enabling downstream analytical workflows.
 
 ```python
 from chalk.integrations import GlueCatalog
