--- a/notebook-development.mdx
+++ b/notebook-development.mdx
@@ -59,7 +59,9 @@ client.whoami()
 ```
 
 If everything is properly configured, you should see your `user_id`, `team_id` and `environment_id` come back:
-> `WhoAmIResponse(user='<user_id>', environment_id=<environment_id>, team_id='<team_id>')`
+```python
+WhoAmIResponse(user='<user_id>', environment_id=<environment_id>, team_id='<team_id>')
+```
 
 ## Loading Features
 
