--- a/notebook-setup.mdx
+++ b/notebook-setup.mdx
@@ -49,7 +49,7 @@ from chalk import ChalkClient
 client = ChalkClient(
   client_id=CHALK_CLIENT_ID,
   client_secret=CHALK_CLIENT_SECRET,
-  branch='notebook',
+  branch='notebook'
 )
 ```
 
