start guide on how to use apis

--- a/faq.mdx
+++ b/faq.mdx
@@ -139,6 +139,12 @@ You can define resolvers with DataFrame inputs or outputs, which uses the
 using the Chalk DataFrame, but you can also convert the Chalk DataFrames into Pandas or Polars using `.to_pandas()`
 and `.to_polars()` for more data manipulation.
 
+
+### Should I call external API endpoints directly in resolvers or call them outside to Chalk?
+
+We recommend calling API endpoints directly in Chalk resolvers—this makes it easy to
+
+
 ---
 
 ## Querying
