--- a/notebook-setup.mdx
+++ b/notebook-setup.mdx
@@ -4,7 +4,7 @@ description: Set up Chalk in your notebook of choice.
 published: true
 ---
 
-In this section we walk through authentication: how to connect to Chalk from a
+In this section, we walk through authentication: how to connect to Chalk from a
 notebook.
 
 To authenticate, we recommend generating a client ID and secret key pair.
