fix broken notebook links

--- a/notebook-setup.mdx
+++ b/notebook-setup.mdx
@@ -16,7 +16,7 @@ deployment permissions should be sufficient).
 
 You can then use your access credentials to connect Chalk to any Jupyter notebook
 environment. In the following section, we show the process of authenticating
-to a [local notebook](#local). We then show the process for [Hex](#Hex), [Deepnote](#Deepnote), and [Vertex](#vertex-and-google-colab-enterprise).
+to a [local notebook](#local). We then show the process for [Hex](#hex), [Deepnote](#deepnote), and [Vertex](#vertex-and-google-colab-enterprise).
 
 ## Local
 
