--- a/materialized_aggregations.mdx
+++ b/materialized_aggregations.mdx
@@ -183,3 +183,9 @@ When possible, Chalk will use the same timeseries data to serve multiple feature
 Other useful information here is the `Bucket` column, which shows the current bucket size.
 The `Retention` column shows the maximum time window of any feature that depends on the given timeseries.
 The `Dependent Features` column lists the features that are served by the given timeseries.
+
+
+### Materialized aggregations with streaming data
+
+For information on updating materialized aggregations with streaming data, see the example in the streaming
+documentation [here](/docs/windowed-streaming).
