--- a/okta-scim.mdx
+++ b/okta-scim.mdx
@@ -43,6 +43,10 @@ You'll use this token to configure Okta's SCIM authentication.
         - Push New Users
         - Push Profile Updates
         - Push Groups
+    - Support provisioning to app:
+        - Create Users
+        - Update User Attributes
+        - Deactivate Users
     - Authentication Mode: "HTTP Header", and set the Bearer header to the SCIM token you generated in your Chalk dashboard.
 5. Contact Chalk Support to enable SCIM on
 your account, and set up the initial Okta Group to Chalk
