--- a/notebook-setup.mdx
+++ b/notebook-setup.mdx
@@ -70,7 +70,7 @@ from chalk import ChalkClient
 client = ChalkClient()
 ```
 
-## Vertex & Google Colab Enterprise
+## Vertex and Google Colab Enterprise
 
 On Google Colab Enterprise, you can set up secrets with the Google Secret Manager.
 Add two secrets named `chalk-client-id` and `chalk-client-secret` to Google Secret Manager
