--- a/notebook-tutorial.mdx
+++ b/notebook-tutorial.mdx
@@ -271,7 +271,7 @@ we alias `created_at` to `authorized_at` for `Authorization`
 
 ### SQL Resolvers
 
-We will use the [`%%resolver`](/docs/notebook-development#resolver) magic to define SQL resolvers in our notebook.
+We will use the [`%%resolver`](/docs/notebook-magics#resolver) magic to define SQL resolvers in our notebook.
 
 ```sql notebook.ipynb
 %%resolver get_merchant_features
