--- a/configuration.mdx
+++ b/configuration.mdx
@@ -73,7 +73,7 @@ features and resolvers.
         </SubAttribute>
         <SubAttribute field='platform_version' kind='str'>
           Reference a version of the Chalk runtime that you want to use for this environment. Can be either a version
-          tag, like `3.0.0`, or a release stream like `stable`. If not specified, defaults to `stable`.
+          tag, like `v3.0.0`, or a release stream like `stable`. If not specified, defaults to `stable`.
         </SubAttribute>
       </SubAttributeTable>
     </SubAttribute>
