--- a/prompts.mdx
+++ b/prompts.mdx
@@ -47,7 +47,7 @@ class User:
         ],
         output_structure=UserSentiment,
     )
-    predicted_sentiment: str = F.json_value(_.response, "sentiment")
+    predicted_sentiment: str = F.json_value(_.response.response, "sentiment")
 ```
 
 ### Using Named Prompts
@@ -66,7 +66,7 @@ class User:
     comment: str
     actual_sentiment: str
     response: P.PromptResponse = P.run_prompt("analyze_sentiment")
-    predicted_sentiment: str = F.json_value(_.response, "sentiment")
+    predicted_sentiment: str = F.json_value(_.response.response, "sentiment")
 ```
 
 ## Evaluating Prompts
